
2017-06-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* ppparse.y, config.def: only allow extension ">> DEFINE CONSTANT var [AS]"
	  depending on configuration option define-constant-directive
      --> use plain  >> DEFINE var [AS] literal for conditional compilation
      and use        01 CONSTANT with/without FROM clause  for constant definitions

2017-05-14  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, config.def: part reverted r837 - allow incorrect
	  configuration section paragraph order with
	  incorrect-conf-sec-order option (see bug #224).
	* parser.y (check_comp_duplicate): removed redundant code checking
	  for duplicate SOURCE-/OBJECT-COMPUTER paragraphs.

2017-06-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: prevent memory leak when options are specified multiple times
	* cobc.c (print_program_trailer): correct program order in listing
	  for both with/without code generation
	* cobc.c (process_translate): on processing errors set cb_flag_syntax_only
	  to not loose the information "no codegen occured"
	* cobc.c: replaced --no-symbols (cb_no_symbols) by
	  -tsymbols (cb_listing_symbols)
	* cobc.c: added (cobc_enum_explain_storage) to output
	  storage note in symbol listing

2017-06-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def, pplex.l: renamed cb_eject_statement to cb_listing_statements,
	  added title-statement
	* pplex.l, ppparse.y: added parsing for *CONTROL statement (PENDING)
	  and EJECT/SKIP1/SKIP2/SKIP3 + TITLE statements (either "removing" from
	  further handling [processed in cobc.c directly] or pass for example as
	  user-defined word)
	* cobc.c: handle listing-directive statements for listing creation

2017-06-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c, cobc.h, parser.y: added context check for OBJECT-COMPUTER
	* parser.y: added missing parts to MEMORY SIZE (parsing only)