@@ -3915,6 +3915,31 @@ AT_CHECK([./prog 1ARG], [3], [OUT], [ERR])
 AT_CLEANUP
 
 
+AT_SETUP([DISPLAY DIRECTIVE and $DISPLAY])
+AT_KEYWORDS([extensions])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       PROCEDURE        DIVISION.
+       >> DISPLAY some text
+       >> DISPLAY   other  text #2  *> comment
+       >> DISPLAY  "literal text  *> no comment"
+       $DISPLAY  MF compile time text  *> without comment
+           GOBACK.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0],
+[some text
+other  text #2
+literal text  *> no comment
+MF compile time text
+])
+AT_CLEANUP
+
+
 AT_SETUP([Conditional/define directives (1)])
 AT_KEYWORDS([extensions directive])
 
@@ -4042,6 +4067,7 @@ AT_CHECK([$COMPILE -DACTIVATE2 prog.cob], [0],
 [OK
 ])
 AT_CLEANUP
+
 
 AT_SETUP([Conditional/define directives (6)])
 AT_KEYWORDS([extensions directive])
