@@ -1,10 +1,17 @@
 
+2017-06-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* pplex.l: remove trailing spaces and inline comments
+	  for >> DISPLAY and $DISPLAY, remove surrounding quotation symbols
+	* typeck.c (cb_build_const_from): create numeric constant instead
+	  of alphanumeric if the compile-time variable is numeric
+
 2017-06-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* ppparse.y, config.def: only allow extension ">> DEFINE CONSTANT var [AS]"
 	  depending on configuration option define-constant-directive
-      --> use plain  >> DEFINE var [AS] literal for conditional compilation
-      and use        01 CONSTANT with/without FROM clause  for constant definitions
+	  --> use plain  >> DEFINE var [AS] literal for conditional compilation
+	  and use        01 CONSTANT with/without FROM clause  for constant definitions
 
 2017-05-14  Edward Hart <edward.dan.hart@gmail.com>
 
